Updating for Images

--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ h1 {
     font-size:70px;
     color:white;
     text-align: center;
-    background: url('images/bowiebanner.jpeg');
+    background: url('bowiebanner.jpeg');
     background-color: #9a321b;
     background-repeat: no-repeat;
     background-size: cover;
